--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>Homework 1</title>
 </head>
 <body>
@@ -19,7 +18,7 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="#">info@devstudio.com </a>></li>
+            <li><a href="#">info@devstudio.com </a></li>
             <li><a href="#">+38 096 111 11 11</a></li>
         </ul>
     </header> 
@@ -55,9 +54,9 @@
         <section class="our-projects">
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/box 1.png" alt="" width = "370"></li>
-                <li><img src="./img/box 2.png" alt="" width = "370"></li>
-                <li><img src="./img/box 3.png" alt="" width = "370"></li>
+                <li><img src="./images/box 1.png" alt="" width = "370" height="294"></li>
+                <li><img src="./images/box 2.png" alt="" width = "370" height="294"></li>
+                <li><img src="./images/box 3.png" alt="" width = "370" height="294"></li>
             </ul>
         </section>
         <!-- our-team -->
@@ -65,22 +64,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/img.jpg" alt="Product Designer" width = "270" >
+                    <img src="./images/img 1.jpg" alt="Product Designer" width = "270" height="260" >
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/img (1).jpg" alt="Frontend Developer" width = "270" >
+                    <img src="./images/img 2.jpg" alt="Frontend Developer" width = "270" height="260" >
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/img (2).jpg" alt="Marketing" width = "270" >
+                    <img src="./images/img 3.jpg" alt="Marketing" width = "270" height="260" >
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/img (3).jpg" alt="UI Designer" width = "270" >
+                    <img src="./images/img 4.jpg" alt="UI Designer" width = "270" height="260" >
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -92,7 +91,7 @@
         <address>
             <a href="./index.html">WebStudio</a>
             <p> г. Киев, пр-т Леси Украинки, 26 </p>
-            <a href="#">info@example.com </a>
+            <a href="#">info@example.com </a><br>
             <a href="#">+38 099 111 11 11 </a>
         </address>
     </footer>
