--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 1</title>
+    <title>Студия</title>
 </head>
 <body>
     <!-- header -->
@@ -27,7 +27,7 @@
         <!-- our-slogan --> 
         <section class="our-slogan">
             <h1>Эффективные решения для вашего бизнеса</h1> 
-            <a href="#">Заказать услугу</a>
+            <button type="button">Заказать услугу</button>
         </section>
         <!-- our-values -->
         <section class="our-values">
@@ -54,9 +54,9 @@
         <section class="our-projects">
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.png" alt="" width = "370" height="294"></li>
-                <li><img src="./images/box2.png" alt="" width = "370" height="294"></li>
-                <li><img src="./images/box3.png" alt="" width = "370" height="294"></li>
+                <li><img src="./images/box1.jpg" alt="програмист кодит" width = "370" height="294"></li>
+                <li><img src="./images/box2.jpg" alt="дизайнер делает макет" width = "370" height="294"></li>
+                <li><img src="./images/box3.jpg" alt="планшет с палитрой красок" width = "370" height="294"></li>
             </ul>
         </section>
         <!-- our-team -->
